# OpenGL

./: .gitignore  CMakeLists.txt  main.cpp  readme.md  test.cpp  vectorShader.txt
head/: Bezier.h  Matrix.h  Model.h  Shader.h  Transform.h  Vertices.h  Window.h
lib/assimp/: INSTALL_RECEIPT.json  sbom.spdx.json
lib/assimp/.brew/: assimp.rb
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/glm/: INSTALL_RECEIPT.json  sbom.spdx.json
lib/glm/.brew/: glm.rb
lib/glm/share/glm/: glmConfig.cmake
lib/glm/share/man/html/: a00002_source.html  dir_026c2db901f78a36dbfb31e1a16d14ee.html  dir_2a7f9772e2a864532f24420c04914bd1.html  dir_30239ea9c8f5d662fa7967f76472261c.html  dir_5e8a7bbde1a4928aae401de5a4a8708b.html  dir_761ea746a0cc50575dde9eeff1134378.html  doxygen_crawl.html  files.html  index.html
res/: exp1.1.txt  exp1.2.txt  exp1.3.txt  exp1.4.txt
res/bedroom/: Bedroom.mtl
shader/: fragmentShader(1.5).txt  vectorShader(1.5).txt  vectorShader(t).txt  vectorShader.txt
source/: Model.cpp  Shader.cpp  Transform.cpp  exp1.1.cpp  exp1.2.cpp  exp1.3.cpp  exp1.4.cpp  exp1.5.cpp  exp1.6.cpp
src/: Bezier.cpp  Matrix.cpp  Model.cpp  Shader.cpp  Shader.h  Vertices.cpp  Window.cpp  main.cpp
